--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,7 @@
       "start:prod": "node dist/main",
       "prisma:generate": "prisma generate",
       "prisma:migrate": "prisma migrate dev",
-      "prisma:studio": "prisma studio",
-      "prisma:seed": "ts-node prisma/seed.ts"
-   },
-   "prisma": {
-      "seed": "ts-node prisma/seed.ts"
+      "prisma:studio": "prisma studio"
    },
    "keywords": [],
    "author": "",
