--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
       "@nestjs/jwt": "^11.0.2",
       "@nestjs/passport": "^11.0.5",
       "@nestjs/platform-express": "^11.1.14",
+      "@nestjs/swagger": "^11.2.6",
       "@prisma/client": "^5.22.0",
       "@types/multer": "^2.0.0",
       "bcrypt": "^6.0.0",
